Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,14 @@ ExportedObj/
 *.svd
 
 
+
 # Unity3D generated meta files
 *.pidb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+
+Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
+Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
+ProjectSettings/ProjectSettings.asset
