--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ sysinfo.txt
 Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
 Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
 ProjectSettings/ProjectSettings.asset
+Assets/Scenes/Untracked
