--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
 Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
 ProjectSettings/ProjectSettings.asset
 Assets/Scenes/Untracked
+Assets/Scenes/Untracked.meta
